--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,16 @@
         color: #666;
       }
     </style>
+    <!-- bower:css -->
+    <!-- endbower -->
+    <!-- build:config -->
+    <!-- 此处为全局环境配置 -->
+    <!-- endbuild -->
   </head>
   <body>
     <!-- 这个是标题 -->
     <h1>yunle-template-gulp</h1>
+    <div class="background"></div>
     <ul>
       <li>
         假数据接口 path: <a target="_blank" href="/api/mock">/api/mock </a>
@@ -35,6 +41,8 @@
         <p id="js-rap-data"></p>
       </li>
     </ul>
+    <!-- bower:js -->
+    <!-- endbower -->
     <script type="text/javascript" src="./js/base.js?rev=@@hash"></script>
   </body>
 </html>
