--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>yunle-template-gulp</title>
-    <link rel="stylesheet" href="./libs/css/normalize.css?rev=@@hash">
-    <link rel="stylesheet" href="./styles/less/base.css?rev=@@hash">
+    <link rel="stylesheet" href="./assets/libs/css/normalize.css?rev=@@hash">
+    <link rel="stylesheet" href="./assets/styles/less/base.css?rev=@@hash">
     <style>
       h1{
         background: #eee;
@@ -41,6 +41,6 @@
     </ul>
     <!-- bower:js -->
     <!-- endbower -->
-    <script type="text/javascript" src="./js/base.js?rev=@@hash"></script>
+    <script type="text/javascript" src="./assets/js/base.js?rev=@@hash"></script>
   </body>
 </html>
